# astro-colourspace

./: 4. slices.ipynb  __init__.py  colourspace.py  gamut.py  maps.py  pyproject.toml  slices.py  version.py
colourspace/: 2. sRGB gamut.ipynb  3. full gamut.ipynb  5. cmaps.ipynb  __init__.py  create_tutorials.py  gamut.py  maps.py  slices.py
colourspace/tutorials/: 1. convert.ipynb  5.1 cmaps helix.ipynb
