[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "colourspace"
dynamic = ["version"]
description = "Development Status :: 4 - Beta"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.6"
authors = [
    { name = "G. Ferrand", email = "" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [ 'numpy',
                'matplotlib',
                'scipy',
                'colorspacious',
                'colour-science',
                'pyx',
]

[project.urls]
Homepage = "https://github.com/gillesferrand/colourspace"

[project.scripts]
create_colourspace_tutorials = "colourspace.create_tutorials:main"

[tool.hatch.version]
path = "version.py"



[tool.hatch.build.targets.sdist]
include = [
    "/colourspace",
]
